overflow fixed

--- a/app/Courses/AllCourses/styles.module.css
+++ b/app/Courses/AllCourses/styles.module.css
@@ -3,6 +3,8 @@
 .container {
     display: flex;
     padding-left: 20px;
+    overflow: hidden;
+    position: relative;
 }
 
 .mainContent {
